parser/team21/Analisis Ascendente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    ALTER
    AND
    AS
    BETWEEN
    CHECK
    CRDR
    CRIZQ
    DATABASE
    DAY
    DOSPUNTOS
    DROP
    ENUM
    EXPONENCIAL
    FALSE
    HOUR
    IF
    ILIKE
    IN
    IS
    LIKE
    LLDR
    LLIZQ
    MINUTE
    MONTH
    OR
    OWNER
    PORCENTAJE
    PRECISION
    PUNTO
    RENAME
    REPLACE
    SECOND
    SELECT
    SHOW
    SIMILAR
    TO
    TRUE
    TYPE
    YEAR

Grammar

Rule 0     S' -> s
Rule 1     s -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> CREATE TABLE ID PARIZQ campos PARDR PTCOMA
Rule 5     campos -> campos COMA campo
Rule 6     campos -> campo
Rule 7     campo -> ID tipo
Rule 8     campo -> ID tipo acompaniamiento
Rule 9     campo -> CONSTRAINT ID FOREIGN KEY PARIZQ ID PARDR REFERENCES ID PARIZQ ID PARDR
Rule 10    campo -> PRIMARY KEY PARIZQ ID PARDR
Rule 11    acompaniamiento -> acompaniamiento acom
Rule 12    acompaniamiento -> acom
Rule 13    acom -> NOT NULL
Rule 14    acom -> NULL
Rule 15    acom -> UNIQUE
Rule 16    acom -> DEFAULT ENTERO
Rule 17    acom -> DEFAULT CADENA
Rule 18    acom -> DEFAULT NUMDECIMAL
Rule 19    acom -> PRIMARY KEY
Rule 20    tipo -> SMALLINT
Rule 21    tipo -> INT
Rule 22    tipo -> BIGINT
Rule 23    tipo -> DECIMAL
Rule 24    tipo -> NUMERIC
Rule 25    tipo -> REAL
Rule 26    tipo -> DOUBLE
Rule 27    tipo -> MONEY
Rule 28    tipo -> VARYING
Rule 29    tipo -> TEXT
Rule 30    tipo -> TIMESTAMP
Rule 31    tipo -> DATE
Rule 32    tipo -> TIME
Rule 33    tipo -> INTERVAL
Rule 34    tipo -> BOOLEAN
Rule 35    tipo -> CHARACTER PARIZQ ENTERO PARDR
Rule 36    tipo -> VARCHAR PARIZQ ENTERO PARDR
Rule 37    tipo -> CHAR PARIZQ ENTERO PARDR
Rule 38    instruccion -> INSERT INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
Rule 39    instruccion -> INSERT INTO ID VALUES values PTCOMA
Rule 40    listaID -> listaID COMA ID
Rule 41    listaID -> ID
Rule 42    values -> values COMA value
Rule 43    values -> value
Rule 44    value -> PARIZQ listaValores PARDR
Rule 45    listaValores -> listaValores COMA valores
Rule 46    listaValores -> valores
Rule 47    valores -> ENTERO
Rule 48    valores -> NUMDECIMAL
Rule 49    valores -> CADENA
Rule 50    instruccion -> UPDATE ID SET asignaciones PTCOMA
Rule 51    instruccion -> UPDATE ID SET asignaciones WHERE where PTCOMA
Rule 52    asignaciones -> asignaciones COMA asignacion
Rule 53    asignaciones -> asignacion
Rule 54    where -> asignacion
Rule 55    asignacion -> ID IGUAL E
Rule 56    E -> PARIZQ E PARDR
Rule 57    E -> operando
Rule 58    E -> unario
Rule 59    E -> valores
Rule 60    E -> var
Rule 61    operando -> E MAS E
Rule 62    operando -> E MENOS E
Rule 63    operando -> E MULT E
Rule 64    operando -> E DIV E
Rule 65    operando -> E IGUALIGUAL E
Rule 66    operando -> E NOIGUAL E
Rule 67    operando -> E MENOR E
Rule 68    operando -> E MAYOR E
Rule 69    operando -> E MENORIGUAL E
Rule 70    operando -> E MAYORIGUAL E
Rule 71    operando -> E MENMEN E
Rule 72    operando -> E MAYMAY E
Rule 73    operando -> E ANDO E
Rule 74    operando -> E ORO E
Rule 75    unario -> NOTO E
Rule 76    unario -> MENOS E
Rule 77    unario -> GNOT E
Rule 78    var -> ID
Rule 79    instruccion -> DELETE FROM ID WHERE where PTCOMA
Rule 80    instruccion -> DELETE FROM ID PTCOMA

Terminals, with rules where they appear

ADD                  : 
ALTER                : 
AND                  : 
ANDO                 : 73
AS                   : 
BETWEEN              : 
BIGINT               : 22
BOOLEAN              : 34
CADENA               : 17 49
CHAR                 : 37
CHARACTER            : 35
CHECK                : 
COMA                 : 5 40 42 45 52
CONSTRAINT           : 9
CRDR                 : 
CREATE               : 4
CRIZQ                : 
DATABASE             : 
DATE                 : 31
DAY                  : 
DECIMAL              : 23
DEFAULT              : 16 17 18
DELETE               : 79 80
DIV                  : 64
DOSPUNTOS            : 
DOUBLE               : 26
DROP                 : 
ENTERO               : 16 35 36 37 47
ENUM                 : 
EXPONENCIAL          : 
FALSE                : 
FOREIGN              : 9
FROM                 : 79 80
GNOT                 : 77
HOUR                 : 
ID                   : 4 7 8 9 9 9 9 10 38 39 40 41 50 51 55 78 79 80
IF                   : 
IGUAL                : 55
IGUALIGUAL           : 65
ILIKE                : 
IN                   : 
INSERT               : 38 39
INT                  : 21
INTERVAL             : 33
INTO                 : 38 39
IS                   : 
KEY                  : 9 10 19
LIKE                 : 
LLDR                 : 
LLIZQ                : 
MAS                  : 61
MAYMAY               : 72
MAYOR                : 68
MAYORIGUAL           : 70
MENMEN               : 71
MENOR                : 67
MENORIGUAL           : 69
MENOS                : 62 76
MINUTE               : 
MONEY                : 27
MONTH                : 
MULT                 : 63
NOIGUAL              : 66
NOT                  : 13
NOTO                 : 75
NULL                 : 13 14
NUMDECIMAL           : 18 48
NUMERIC              : 24
OR                   : 
ORO                  : 74
OWNER                : 
PARDR                : 4 9 9 10 35 36 37 38 44 56
PARIZQ               : 4 9 9 10 35 36 37 38 44 56
PORCENTAJE           : 
PRECISION            : 
PRIMARY              : 10 19
PTCOMA               : 4 38 39 50 51 79 80
PUNTO                : 
REAL                 : 25
REFERENCES           : 9
RENAME               : 
REPLACE              : 
SECOND               : 
SELECT               : 
SET                  : 50 51
SHOW                 : 
SIMILAR              : 
SMALLINT             : 20
TABLE                : 4
TEXT                 : 29
TIME                 : 32
TIMESTAMP            : 30
TO                   : 
TRUE                 : 
TYPE                 : 
UNIQUE               : 15
UPDATE               : 50 51
VALUES               : 38 39
VARCHAR              : 36
VARYING              : 28
WHERE                : 51 79
YEAR                 : 
error                : 

Nonterminals, with rules where they appear

E                    : 55 56 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 76 77
acom                 : 11 12
acompaniamiento      : 8 11
asignacion           : 52 53 54
asignaciones         : 50 51 52
campo                : 5 6
campos               : 4 5
instruccion          : 2 3
instrucciones        : 1 2
listaID              : 38 40
listaValores         : 44 45
operando             : 57
s                    : 0
tipo                 : 7 8
unario               : 58
valores              : 45 46 59
value                : 42 43
values               : 38 39 42
var                  : 60
where                : 51 79

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . CREATE TABLE ID PARIZQ campos PARDR PTCOMA
    (38) instruccion -> . INSERT INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
    (39) instruccion -> . INSERT INTO ID VALUES values PTCOMA
    (50) instruccion -> . UPDATE ID SET asignaciones PTCOMA
    (51) instruccion -> . UPDATE ID SET asignaciones WHERE where PTCOMA
    (79) instruccion -> . DELETE FROM ID WHERE where PTCOMA
    (80) instruccion -> . DELETE FROM ID PTCOMA

    CREATE          shift and go to state 4
    INSERT          shift and go to state 5
    UPDATE          shift and go to state 6
    DELETE          shift and go to state 7

    s                              shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3

state 1

    (0) S' -> s .



state 2

    (1) s -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . CREATE TABLE ID PARIZQ campos PARDR PTCOMA
    (38) instruccion -> . INSERT INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
    (39) instruccion -> . INSERT INTO ID VALUES values PTCOMA
    (50) instruccion -> . UPDATE ID SET asignaciones PTCOMA
    (51) instruccion -> . UPDATE ID SET asignaciones WHERE where PTCOMA
    (79) instruccion -> . DELETE FROM ID WHERE where PTCOMA
    (80) instruccion -> . DELETE FROM ID PTCOMA

    $end            reduce using rule 1 (s -> instrucciones .)
    CREATE          shift and go to state 4
    INSERT          shift and go to state 5
    UPDATE          shift and go to state 6
    DELETE          shift and go to state 7

    instruccion                    shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    INSERT          reduce using rule 3 (instrucciones -> instruccion .)
    UPDATE          reduce using rule 3 (instrucciones -> instruccion .)
    DELETE          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> CREATE . TABLE ID PARIZQ campos PARDR PTCOMA

    TABLE           shift and go to state 9


state 5

    (38) instruccion -> INSERT . INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
    (39) instruccion -> INSERT . INTO ID VALUES values PTCOMA

    INTO            shift and go to state 10


state 6

    (50) instruccion -> UPDATE . ID SET asignaciones PTCOMA
    (51) instruccion -> UPDATE . ID SET asignaciones WHERE where PTCOMA

    ID              shift and go to state 11


state 7

    (79) instruccion -> DELETE . FROM ID WHERE where PTCOMA
    (80) instruccion -> DELETE . FROM ID PTCOMA

    FROM            shift and go to state 12


state 8

    (2) instrucciones -> instrucciones instruccion .

    CREATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INSERT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UPDATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DELETE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 9

    (4) instruccion -> CREATE TABLE . ID PARIZQ campos PARDR PTCOMA

    ID              shift and go to state 13


state 10

    (38) instruccion -> INSERT INTO . ID PARIZQ listaID PARDR VALUES values PTCOMA
    (39) instruccion -> INSERT INTO . ID VALUES values PTCOMA

    ID              shift and go to state 14


state 11

    (50) instruccion -> UPDATE ID . SET asignaciones PTCOMA
    (51) instruccion -> UPDATE ID . SET asignaciones WHERE where PTCOMA

    SET             shift and go to state 15


state 12

    (79) instruccion -> DELETE FROM . ID WHERE where PTCOMA
    (80) instruccion -> DELETE FROM . ID PTCOMA

    ID              shift and go to state 16


state 13

    (4) instruccion -> CREATE TABLE ID . PARIZQ campos PARDR PTCOMA

    PARIZQ          shift and go to state 17


state 14

    (38) instruccion -> INSERT INTO ID . PARIZQ listaID PARDR VALUES values PTCOMA
    (39) instruccion -> INSERT INTO ID . VALUES values PTCOMA

    PARIZQ          shift and go to state 18
    VALUES          shift and go to state 19


state 15

    (50) instruccion -> UPDATE ID SET . asignaciones PTCOMA
    (51) instruccion -> UPDATE ID SET . asignaciones WHERE where PTCOMA
    (52) asignaciones -> . asignaciones COMA asignacion
    (53) asignaciones -> . asignacion
    (55) asignacion -> . ID IGUAL E

    ID              shift and go to state 20

    asignaciones                   shift and go to state 21
    asignacion                     shift and go to state 22

state 16

    (79) instruccion -> DELETE FROM ID . WHERE where PTCOMA
    (80) instruccion -> DELETE FROM ID . PTCOMA

    WHERE           shift and go to state 23
    PTCOMA          shift and go to state 24


state 17

    (4) instruccion -> CREATE TABLE ID PARIZQ . campos PARDR PTCOMA
    (5) campos -> . campos COMA campo
    (6) campos -> . campo
    (7) campo -> . ID tipo
    (8) campo -> . ID tipo acompaniamiento
    (9) campo -> . CONSTRAINT ID FOREIGN KEY PARIZQ ID PARDR REFERENCES ID PARIZQ ID PARDR
    (10) campo -> . PRIMARY KEY PARIZQ ID PARDR

    ID              shift and go to state 25
    CONSTRAINT      shift and go to state 28
    PRIMARY         shift and go to state 29

    campos                         shift and go to state 26
    campo                          shift and go to state 27

state 18

    (38) instruccion -> INSERT INTO ID PARIZQ . listaID PARDR VALUES values PTCOMA
    (40) listaID -> . listaID COMA ID
    (41) listaID -> . ID

    ID              shift and go to state 30

    listaID                        shift and go to state 31

state 19

    (39) instruccion -> INSERT INTO ID VALUES . values PTCOMA
    (42) values -> . values COMA value
    (43) values -> . value
    (44) value -> . PARIZQ listaValores PARDR

    PARIZQ          shift and go to state 34

    values                         shift and go to state 32
    value                          shift and go to state 33

state 20

    (55) asignacion -> ID . IGUAL E

    IGUAL           shift and go to state 35


state 21

    (50) instruccion -> UPDATE ID SET asignaciones . PTCOMA
    (51) instruccion -> UPDATE ID SET asignaciones . WHERE where PTCOMA
    (52) asignaciones -> asignaciones . COMA asignacion

    PTCOMA          shift and go to state 36
    WHERE           shift and go to state 37
    COMA            shift and go to state 38


state 22

    (53) asignaciones -> asignacion .

    PTCOMA          reduce using rule 53 (asignaciones -> asignacion .)
    WHERE           reduce using rule 53 (asignaciones -> asignacion .)
    COMA            reduce using rule 53 (asignaciones -> asignacion .)


state 23

    (79) instruccion -> DELETE FROM ID WHERE . where PTCOMA
    (54) where -> . asignacion
    (55) asignacion -> . ID IGUAL E

    ID              shift and go to state 20

    where                          shift and go to state 39
    asignacion                     shift and go to state 40

state 24

    (80) instruccion -> DELETE FROM ID PTCOMA .

    CREATE          reduce using rule 80 (instruccion -> DELETE FROM ID PTCOMA .)
    INSERT          reduce using rule 80 (instruccion -> DELETE FROM ID PTCOMA .)
    UPDATE          reduce using rule 80 (instruccion -> DELETE FROM ID PTCOMA .)
    DELETE          reduce using rule 80 (instruccion -> DELETE FROM ID PTCOMA .)
    $end            reduce using rule 80 (instruccion -> DELETE FROM ID PTCOMA .)


state 25

    (7) campo -> ID . tipo
    (8) campo -> ID . tipo acompaniamiento
    (20) tipo -> . SMALLINT
    (21) tipo -> . INT
    (22) tipo -> . BIGINT
    (23) tipo -> . DECIMAL
    (24) tipo -> . NUMERIC
    (25) tipo -> . REAL
    (26) tipo -> . DOUBLE
    (27) tipo -> . MONEY
    (28) tipo -> . VARYING
    (29) tipo -> . TEXT
    (30) tipo -> . TIMESTAMP
    (31) tipo -> . DATE
    (32) tipo -> . TIME
    (33) tipo -> . INTERVAL
    (34) tipo -> . BOOLEAN
    (35) tipo -> . CHARACTER PARIZQ ENTERO PARDR
    (36) tipo -> . VARCHAR PARIZQ ENTERO PARDR
    (37) tipo -> . CHAR PARIZQ ENTERO PARDR

    SMALLINT        shift and go to state 42
    INT             shift and go to state 43
    BIGINT          shift and go to state 44
    DECIMAL         shift and go to state 45
    NUMERIC         shift and go to state 46
    REAL            shift and go to state 47
    DOUBLE          shift and go to state 48
    MONEY           shift and go to state 49
    VARYING         shift and go to state 50
    TEXT            shift and go to state 51
    TIMESTAMP       shift and go to state 52
    DATE            shift and go to state 53
    TIME            shift and go to state 54
    INTERVAL        shift and go to state 55
    BOOLEAN         shift and go to state 56
    CHARACTER       shift and go to state 57
    VARCHAR         shift and go to state 58
    CHAR            shift and go to state 59

    tipo                           shift and go to state 41

state 26

    (4) instruccion -> CREATE TABLE ID PARIZQ campos . PARDR PTCOMA
    (5) campos -> campos . COMA campo

    PARDR           shift and go to state 60
    COMA            shift and go to state 61


state 27

    (6) campos -> campo .

    PARDR           reduce using rule 6 (campos -> campo .)
    COMA            reduce using rule 6 (campos -> campo .)


state 28

    (9) campo -> CONSTRAINT . ID FOREIGN KEY PARIZQ ID PARDR REFERENCES ID PARIZQ ID PARDR

    ID              shift and go to state 62


state 29

    (10) campo -> PRIMARY . KEY PARIZQ ID PARDR

    KEY             shift and go to state 63


state 30

    (41) listaID -> ID .

    PARDR           reduce using rule 41 (listaID -> ID .)
    COMA            reduce using rule 41 (listaID -> ID .)


state 31

    (38) instruccion -> INSERT INTO ID PARIZQ listaID . PARDR VALUES values PTCOMA
    (40) listaID -> listaID . COMA ID

    PARDR           shift and go to state 64
    COMA            shift and go to state 65


state 32

    (39) instruccion -> INSERT INTO ID VALUES values . PTCOMA
    (42) values -> values . COMA value

    PTCOMA          shift and go to state 66
    COMA            shift and go to state 67


state 33

    (43) values -> value .

    PTCOMA          reduce using rule 43 (values -> value .)
    COMA            reduce using rule 43 (values -> value .)


state 34

    (44) value -> PARIZQ . listaValores PARDR
    (45) listaValores -> . listaValores COMA valores
    (46) listaValores -> . valores
    (47) valores -> . ENTERO
    (48) valores -> . NUMDECIMAL
    (49) valores -> . CADENA

    ENTERO          shift and go to state 70
    NUMDECIMAL      shift and go to state 71
    CADENA          shift and go to state 72

    listaValores                   shift and go to state 68
    valores                        shift and go to state 69

state 35

    (55) asignacion -> ID IGUAL . E
    (56) E -> . PARIZQ E PARDR
    (57) E -> . operando
    (58) E -> . unario
    (59) E -> . valores
    (60) E -> . var
    (61) operando -> . E MAS E
    (62) operando -> . E MENOS E
    (63) operando -> . E MULT E
    (64) operando -> . E DIV E
    (65) operando -> . E IGUALIGUAL E
    (66) operando -> . E NOIGUAL E
    (67) operando -> . E MENOR E
    (68) operando -> . E MAYOR E
    (69) operando -> . E MENORIGUAL E
    (70) operando -> . E MAYORIGUAL E
    (71) operando -> . E MENMEN E
    (72) operando -> . E MAYMAY E
    (73) operando -> . E ANDO E
    (74) operando -> . E ORO E
    (75) unario -> . NOTO E
    (76) unario -> . MENOS E
    (77) unario -> . GNOT E
    (47) valores -> . ENTERO
    (48) valores -> . NUMDECIMAL
    (49) valores -> . CADENA
    (78) var -> . ID

    PARIZQ          shift and go to state 75
    NOTO            shift and go to state 81
    MENOS           shift and go to state 80
    GNOT            shift and go to state 82
    ENTERO          shift and go to state 70
    NUMDECIMAL      shift and go to state 71
    CADENA          shift and go to state 72
    ID              shift and go to state 73

    E                              shift and go to state 74
    operando                       shift and go to state 76
    unario                         shift and go to state 77
    valores                        shift and go to state 78
    var                            shift and go to state 79

state 36

    (50) instruccion -> UPDATE ID SET asignaciones PTCOMA .

    CREATE          reduce using rule 50 (instruccion -> UPDATE ID SET asignaciones PTCOMA .)
    INSERT          reduce using rule 50 (instruccion -> UPDATE ID SET asignaciones PTCOMA .)
    UPDATE          reduce using rule 50 (instruccion -> UPDATE ID SET asignaciones PTCOMA .)
    DELETE          reduce using rule 50 (instruccion -> UPDATE ID SET asignaciones PTCOMA .)
    $end            reduce using rule 50 (instruccion -> UPDATE ID SET asignaciones PTCOMA .)


state 37

    (51) instruccion -> UPDATE ID SET asignaciones WHERE . where PTCOMA
    (54) where -> . asignacion
    (55) asignacion -> . ID IGUAL E

    ID              shift and go to state 20

    where                          shift and go to state 83
    asignacion                     shift and go to state 40

state 38

    (52) asignaciones -> asignaciones COMA . asignacion
    (55) asignacion -> . ID IGUAL E

    ID              shift and go to state 20

    asignacion                     shift and go to state 84

state 39

    (79) instruccion -> DELETE FROM ID WHERE where . PTCOMA

    PTCOMA          shift and go to state 85


state 40

    (54) where -> asignacion .

    PTCOMA          reduce using rule 54 (where -> asignacion .)


state 41

    (7) campo -> ID tipo .
    (8) campo -> ID tipo . acompaniamiento
    (11) acompaniamiento -> . acompaniamiento acom
    (12) acompaniamiento -> . acom
    (13) acom -> . NOT NULL
    (14) acom -> . NULL
    (15) acom -> . UNIQUE
    (16) acom -> . DEFAULT ENTERO
    (17) acom -> . DEFAULT CADENA
    (18) acom -> . DEFAULT NUMDECIMAL
    (19) acom -> . PRIMARY KEY

    PARDR           reduce using rule 7 (campo -> ID tipo .)
    COMA            reduce using rule 7 (campo -> ID tipo .)
    NOT             shift and go to state 88
    NULL            shift and go to state 89
    UNIQUE          shift and go to state 90
    DEFAULT         shift and go to state 91
    PRIMARY         shift and go to state 92

    acompaniamiento                shift and go to state 86
    acom                           shift and go to state 87

state 42

    (20) tipo -> SMALLINT .

    NOT             reduce using rule 20 (tipo -> SMALLINT .)
    NULL            reduce using rule 20 (tipo -> SMALLINT .)
    UNIQUE          reduce using rule 20 (tipo -> SMALLINT .)
    DEFAULT         reduce using rule 20 (tipo -> SMALLINT .)
    PRIMARY         reduce using rule 20 (tipo -> SMALLINT .)
    PARDR           reduce using rule 20 (tipo -> SMALLINT .)
    COMA            reduce using rule 20 (tipo -> SMALLINT .)


state 43

    (21) tipo -> INT .

    NOT             reduce using rule 21 (tipo -> INT .)
    NULL            reduce using rule 21 (tipo -> INT .)
    UNIQUE          reduce using rule 21 (tipo -> INT .)
    DEFAULT         reduce using rule 21 (tipo -> INT .)
    PRIMARY         reduce using rule 21 (tipo -> INT .)
    PARDR           reduce using rule 21 (tipo -> INT .)
    COMA            reduce using rule 21 (tipo -> INT .)


state 44

    (22) tipo -> BIGINT .

    NOT             reduce using rule 22 (tipo -> BIGINT .)
    NULL            reduce using rule 22 (tipo -> BIGINT .)
    UNIQUE          reduce using rule 22 (tipo -> BIGINT .)
    DEFAULT         reduce using rule 22 (tipo -> BIGINT .)
    PRIMARY         reduce using rule 22 (tipo -> BIGINT .)
    PARDR           reduce using rule 22 (tipo -> BIGINT .)
    COMA            reduce using rule 22 (tipo -> BIGINT .)


state 45

    (23) tipo -> DECIMAL .

    NOT             reduce using rule 23 (tipo -> DECIMAL .)
    NULL            reduce using rule 23 (tipo -> DECIMAL .)
    UNIQUE          reduce using rule 23 (tipo -> DECIMAL .)
    DEFAULT         reduce using rule 23 (tipo -> DECIMAL .)
    PRIMARY         reduce using rule 23 (tipo -> DECIMAL .)
    PARDR           reduce using rule 23 (tipo -> DECIMAL .)
    COMA            reduce using rule 23 (tipo -> DECIMAL .)


state 46

    (24) tipo -> NUMERIC .

    NOT             reduce using rule 24 (tipo -> NUMERIC .)
    NULL            reduce using rule 24 (tipo -> NUMERIC .)
    UNIQUE          reduce using rule 24 (tipo -> NUMERIC .)
    DEFAULT         reduce using rule 24 (tipo -> NUMERIC .)
    PRIMARY         reduce using rule 24 (tipo -> NUMERIC .)
    PARDR           reduce using rule 24 (tipo -> NUMERIC .)
    COMA            reduce using rule 24 (tipo -> NUMERIC .)


state 47

    (25) tipo -> REAL .

    NOT             reduce using rule 25 (tipo -> REAL .)
    NULL            reduce using rule 25 (tipo -> REAL .)
    UNIQUE          reduce using rule 25 (tipo -> REAL .)
    DEFAULT         reduce using rule 25 (tipo -> REAL .)
    PRIMARY         reduce using rule 25 (tipo -> REAL .)
    PARDR           reduce using rule 25 (tipo -> REAL .)
    COMA            reduce using rule 25 (tipo -> REAL .)


state 48

    (26) tipo -> DOUBLE .

    NOT             reduce using rule 26 (tipo -> DOUBLE .)
    NULL            reduce using rule 26 (tipo -> DOUBLE .)
    UNIQUE          reduce using rule 26 (tipo -> DOUBLE .)
    DEFAULT         reduce using rule 26 (tipo -> DOUBLE .)
    PRIMARY         reduce using rule 26 (tipo -> DOUBLE .)
    PARDR           reduce using rule 26 (tipo -> DOUBLE .)
    COMA            reduce using rule 26 (tipo -> DOUBLE .)


state 49

    (27) tipo -> MONEY .

    NOT             reduce using rule 27 (tipo -> MONEY .)
    NULL            reduce using rule 27 (tipo -> MONEY .)
    UNIQUE          reduce using rule 27 (tipo -> MONEY .)
    DEFAULT         reduce using rule 27 (tipo -> MONEY .)
    PRIMARY         reduce using rule 27 (tipo -> MONEY .)
    PARDR           reduce using rule 27 (tipo -> MONEY .)
    COMA            reduce using rule 27 (tipo -> MONEY .)


state 50

    (28) tipo -> VARYING .

    NOT             reduce using rule 28 (tipo -> VARYING .)
    NULL            reduce using rule 28 (tipo -> VARYING .)
    UNIQUE          reduce using rule 28 (tipo -> VARYING .)
    DEFAULT         reduce using rule 28 (tipo -> VARYING .)
    PRIMARY         reduce using rule 28 (tipo -> VARYING .)
    PARDR           reduce using rule 28 (tipo -> VARYING .)
    COMA            reduce using rule 28 (tipo -> VARYING .)


state 51

    (29) tipo -> TEXT .

    NOT             reduce using rule 29 (tipo -> TEXT .)
    NULL            reduce using rule 29 (tipo -> TEXT .)
    UNIQUE          reduce using rule 29 (tipo -> TEXT .)
    DEFAULT         reduce using rule 29 (tipo -> TEXT .)
    PRIMARY         reduce using rule 29 (tipo -> TEXT .)
    PARDR           reduce using rule 29 (tipo -> TEXT .)
    COMA            reduce using rule 29 (tipo -> TEXT .)


state 52

    (30) tipo -> TIMESTAMP .

    NOT             reduce using rule 30 (tipo -> TIMESTAMP .)
    NULL            reduce using rule 30 (tipo -> TIMESTAMP .)
    UNIQUE          reduce using rule 30 (tipo -> TIMESTAMP .)
    DEFAULT         reduce using rule 30 (tipo -> TIMESTAMP .)
    PRIMARY         reduce using rule 30 (tipo -> TIMESTAMP .)
    PARDR           reduce using rule 30 (tipo -> TIMESTAMP .)
    COMA            reduce using rule 30 (tipo -> TIMESTAMP .)


state 53

    (31) tipo -> DATE .

    NOT             reduce using rule 31 (tipo -> DATE .)
    NULL            reduce using rule 31 (tipo -> DATE .)
    UNIQUE          reduce using rule 31 (tipo -> DATE .)
    DEFAULT         reduce using rule 31 (tipo -> DATE .)
    PRIMARY         reduce using rule 31 (tipo -> DATE .)
    PARDR           reduce using rule 31 (tipo -> DATE .)
    COMA            reduce using rule 31 (tipo -> DATE .)


state 54

    (32) tipo -> TIME .

    NOT             reduce using rule 32 (tipo -> TIME .)
    NULL            reduce using rule 32 (tipo -> TIME .)
    UNIQUE          reduce using rule 32 (tipo -> TIME .)
    DEFAULT         reduce using rule 32 (tipo -> TIME .)
    PRIMARY         reduce using rule 32 (tipo -> TIME .)
    PARDR           reduce using rule 32 (tipo -> TIME .)
    COMA            reduce using rule 32 (tipo -> TIME .)


state 55

    (33) tipo -> INTERVAL .

    NOT             reduce using rule 33 (tipo -> INTERVAL .)
    NULL            reduce using rule 33 (tipo -> INTERVAL .)
    UNIQUE          reduce using rule 33 (tipo -> INTERVAL .)
    DEFAULT         reduce using rule 33 (tipo -> INTERVAL .)
    PRIMARY         reduce using rule 33 (tipo -> INTERVAL .)
    PARDR           reduce using rule 33 (tipo -> INTERVAL .)
    COMA            reduce using rule 33 (tipo -> INTERVAL .)


state 56

    (34) tipo -> BOOLEAN .

    NOT             reduce using rule 34 (tipo -> BOOLEAN .)
    NULL            reduce using rule 34 (tipo -> BOOLEAN .)
    UNIQUE          reduce using rule 34 (tipo -> BOOLEAN .)
    DEFAULT         reduce using rule 34 (tipo -> BOOLEAN .)
    PRIMARY         reduce using rule 34 (tipo -> BOOLEAN .)
    PARDR           reduce using rule 34 (tipo -> BOOLEAN .)
    COMA            reduce using rule 34 (tipo -> BOOLEAN .)


state 57

    (35) tipo -> CHARACTER . PARIZQ ENTERO PARDR

    PARIZQ          shift and go to state 93


state 58

    (36) tipo -> VARCHAR . PARIZQ ENTERO PARDR

    PARIZQ          shift and go to state 94


state 59

    (37) tipo -> CHAR . PARIZQ ENTERO PARDR

    PARIZQ          shift and go to state 95


state 60

    (4) instruccion -> CREATE TABLE ID PARIZQ campos PARDR . PTCOMA

    PTCOMA          shift and go to state 96


state 61

    (5) campos -> campos COMA . campo
    (7) campo -> . ID tipo
    (8) campo -> . ID tipo acompaniamiento
    (9) campo -> . CONSTRAINT ID FOREIGN KEY PARIZQ ID PARDR REFERENCES ID PARIZQ ID PARDR
    (10) campo -> . PRIMARY KEY PARIZQ ID PARDR

    ID              shift and go to state 25
    CONSTRAINT      shift and go to state 28
    PRIMARY         shift and go to state 29

    campo                          shift and go to state 97

state 62

    (9) campo -> CONSTRAINT ID . FOREIGN KEY PARIZQ ID PARDR REFERENCES ID PARIZQ ID PARDR

    FOREIGN         shift and go to state 98


state 63

    (10) campo -> PRIMARY KEY . PARIZQ ID PARDR

    PARIZQ          shift and go to state 99


state 64

    (38) instruccion -> INSERT INTO ID PARIZQ listaID PARDR . VALUES values PTCOMA

    VALUES          shift and go to state 100


state 65

    (40) listaID -> listaID COMA . ID

    ID              shift and go to state 101


state 66

    (39) instruccion -> INSERT INTO ID VALUES values PTCOMA .

    CREATE          reduce using rule 39 (instruccion -> INSERT INTO ID VALUES values PTCOMA .)
    INSERT          reduce using rule 39 (instruccion -> INSERT INTO ID VALUES values PTCOMA .)
    UPDATE          reduce using rule 39 (instruccion -> INSERT INTO ID VALUES values PTCOMA .)
    DELETE          reduce using rule 39 (instruccion -> INSERT INTO ID VALUES values PTCOMA .)
    $end            reduce using rule 39 (instruccion -> INSERT INTO ID VALUES values PTCOMA .)


state 67

    (42) values -> values COMA . value
    (44) value -> . PARIZQ listaValores PARDR

    PARIZQ          shift and go to state 34

    value                          shift and go to state 102

state 68

    (44) value -> PARIZQ listaValores . PARDR
    (45) listaValores -> listaValores . COMA valores

    PARDR           shift and go to state 103
    COMA            shift and go to state 104


state 69

    (46) listaValores -> valores .

    PARDR           reduce using rule 46 (listaValores -> valores .)
    COMA            reduce using rule 46 (listaValores -> valores .)


state 70

    (47) valores -> ENTERO .

    PARDR           reduce using rule 47 (valores -> ENTERO .)
    COMA            reduce using rule 47 (valores -> ENTERO .)
    MAS             reduce using rule 47 (valores -> ENTERO .)
    MENOS           reduce using rule 47 (valores -> ENTERO .)
    MULT            reduce using rule 47 (valores -> ENTERO .)
    DIV             reduce using rule 47 (valores -> ENTERO .)
    IGUALIGUAL      reduce using rule 47 (valores -> ENTERO .)
    NOIGUAL         reduce using rule 47 (valores -> ENTERO .)
    MENOR           reduce using rule 47 (valores -> ENTERO .)
    MAYOR           reduce using rule 47 (valores -> ENTERO .)
    MENORIGUAL      reduce using rule 47 (valores -> ENTERO .)
    MAYORIGUAL      reduce using rule 47 (valores -> ENTERO .)
    MENMEN          reduce using rule 47 (valores -> ENTERO .)
    MAYMAY          reduce using rule 47 (valores -> ENTERO .)
    ANDO            reduce using rule 47 (valores -> ENTERO .)
    ORO             reduce using rule 47 (valores -> ENTERO .)
    PTCOMA          reduce using rule 47 (valores -> ENTERO .)
    WHERE           reduce using rule 47 (valores -> ENTERO .)


state 71

    (48) valores -> NUMDECIMAL .
